--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-    "name": "saas-backend",
+    "name": "saas-frontend",
     "version": "1.0.0",
-    "main": "index.js",
-    "scripts": {
-      "start": "node index.js"
-    },
+    "private": true,
     "dependencies": {
-      "cors": "^2.8.5",
-      "dotenv": "^16.0.0",
-      "express": "^4.17.1",
-      "pg": "^8.7.1"
+      "react": "^18.0.0",
+      "react-dom": "^18.0.0",
+      "react-scripts": "5.0.1"
+    },
+    "scripts": {
+      "start": "react-scripts start",
+      "build": "react-scripts build"
     }
   }
+  
